--- a/config_sample.env
+++ b/config_sample.env
@@ -1,16 +1,15 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5242747876:AAExtC2_tbwh6yZc-vfjG6HZ3syc8b6XBTM"
+GDRIVE_FOLDER_ID = "1dg7PqMk5KG1Zza27yW0aBw6fC5sahL6m"
+OWNER_ID =1179577193
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API =4557817 
+TELEGRAM_HASH = "d74e82c8f8ab7c6a65306bc82ff916ed"
 UPSTREAM_REPO = "https://github.com/tekeayush/Mirror-bot"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
